--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@proyecto, @us, @tarea]) do |f| %>
+<%= form_for([@proyecto, @userstory, @tarea]) do |f| %>
   <% if @tarea.errors.any? %>
     <div id="error_explanation">
         <p class="error">
