--- a/app/views/tareas/edit.html.erb
+++ b/app/views/tareas/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editando tarea</h1>
+<% content_for :title do %>
+  Editar Tarea
+<% end %>
 
 <%= render 'form' %>
 
-<%= link_to 'Ver', proyecto_userstory_tarea_path(@proyecto, @us, @tarea) %> |
-<%= link_to 'Volver a User Story', proyecto_userstory_path(@proyecto, @us) %>
+<%= link_to 'Ver', proyecto_userstory_tarea_path(@proyecto, @userstory, @tarea) %> |
+<%= link_to 'Volver a User Story', proyecto_userstory_path(@proyecto, @userstory) %>
