--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Proad</title>
+<title>
+  <% if content_for(:title).include? 'Proad' %>
+    <%= content_for(:title) %>
+  <% else %>
+    <%= content_for(:title) + ' - Proad' %>
+  <% end %>
+</title>
+      
   <%= stylesheet_link_tag 'screen', :media => "screen, projection" %>
   <%= stylesheet_link_tag 'print', :media => "print" %>
   <%= stylesheet_link_tag 'jquery-ui-1.8.14.custom' %>
@@ -11,52 +18,22 @@
 <![endif]-->
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <%= yield :head %>
 </head>
 <body>
 
 <div class="container">
 
-    <div id="mast">
-        <div id="logo-account-wrap">
-            <%= image_tag "ProAd.png", :id => 'logo-mast' %>
-            <% if current_user %>
-                <div id="account">
-                    <p>Bienvenido, <%= current_user.nombre or current_user.username %> |
-                    <%= link_to 'Logout', :controller => 'usuarios', :action => 'logout' %>
-                </div>
-            <% end %>
-        </div>
+  <%= render "shared/mast" %>
 
-        <div id="nav-wrap">
-            <ul id="nav">
-                <% if current_user %>
-                    <% if rol "admin" %>
-                        <li><%= nav_link 'Proyectos', proyectos_path %></li>
-                    <% else %>
-                        <li><%= nav_link 'Proyecto', current_user.proyecto %></li>
-                    <% end %>
-                    <% if rol "po", :no_admin => true %>
-                        <li><%= nav_link 'Backlog', proyecto_userstories_path(current_user.proyecto) %></li>
-                        <li><%= nav_link 'Nueva User Story', new_proyecto_userstory_path(current_user.proyecto) %></li>
-                    <% end %>
-                <% end %>
-            </ul>
-        </div>
-    </div>
+  <div id="content">
+    <%= render "shared/breadcrumbs" %>
+    <%= render "shared/notices" %>
+    <h1><%= content_for :title %></h1>
+    <%= yield %>
+  </div>
 
-    <div id="content">
-        <% if flash[:notice] %>
-          <p class="notice"><%= flash[:notice] %></p>
-        <% elsif flash[:error] %>
-          <p class="error"><%= flash[:error] %></p>
-        <% elsif flash[:success] %>
-          <p class="success"><%= flash[:success] %></p>
-        <% end %>
-        <%= yield %>
-    </div>
-
-    <div id="footer">
-    </div>
+  <%= render "shared/footer" %>
 
 </div>
 
