--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <% if content_for(:title).include? 'Proad' %>
     <%= content_for(:title) %>
   <% else %>
-    <%= content_for(:title) + ' - Proad' %>
+    <%= content_for(:title) + ' - ProAd' %>
   <% end %>
 </title>
       
