--- a/app/views/userstories/_form.html.erb
+++ b/app/views/userstories/_form.html.erb
@@ -19,11 +19,11 @@
     <%= f.text_area :descripcion %>
   </div>
   <div class="field">
-    <%= f.label :prioridad %>:
+    <%= f.label :prioridad %><br />
     <%= f.slider :prioridad, :inverted => true %>
   </div>
   <div class="field">
-    <%= f.label :complejidad %>:
+    <%= f.label :complejidad %><br />
     <%= f.slider :complejidad %>
   </div>
 
