agrego links arriba a la derecha

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
 
   <div id="content">
     <%= render "shared/breadcrumbs" %>
+    <div id="special-links"><%= content_for 'special_links' %></div>
     <%= render "shared/notices" %>
     <h1><%= content_for :title %></h1>
     <%= yield %>
