--- a/public/stylesheets/principal.css
+++ b/public/stylesheets/principal.css
@@ -65,3 +65,11 @@ body {
 .error, .notice, .success {
   text-align: center;
 }
+
+/* other */
+
+#special-links {
+  float: right;
+  width: 200px;
+  text-align: right;
+}
