--- a/app/views/usuarios/login.erb
+++ b/app/views/usuarios/login.erb
@@ -2,10 +2,11 @@
 	Login
 <% end %>
 
-<%= form_tag("/login", :method => "post") do %>
+<%= form_tag("/login", :method => "post", :id => "login") do %>
   <%= label_tag(:username, "Usuario") %>
   <%= text_field_tag(:username) %><br/>
   <%= label_tag(:password, "Password") %>
   <%= password_field_tag(:password) %><br/>
+  <label> </label>
   <%= submit_tag("Login") %>
 <% end %>
