--- a/public/stylesheets/principal.css
+++ b/public/stylesheets/principal.css
@@ -66,6 +66,15 @@ body {
   text-align: center;
 }
 
+/* forms */
+#login input[type=submit] {
+  margin: 10px 0 0 100px;
+}
+#login label {
+  float: left;
+  width: 100px;
+}
+
 /* other */
 
 #special-links {
