--- a/app/views/proyectos/show.html.erb
+++ b/app/views/proyectos/show.html.erb
@@ -30,7 +30,21 @@
     <th></th>
   </tr>
 
-<% @proyecto.userstory.order(:prioridad).incompletas.each do |userstory| %>
+<% @proyecto.userstory.order(:prioridad).comenzadas.each do |userstory| %>
+  <tr>
+    <td><%= link_to truncate(userstory.titulo, :length => 80), proyecto_userstory_path(@proyecto, userstory) %></td>
+    <td><%= userstory.porcentaje_avance %></td>
+    <td><%= userstory.complejidad %></td>
+    <td style="text-align:right">
+    <% if rol 'po' %>
+      <%= link_to 'Editar', edit_proyecto_userstory_path(@proyecto, userstory) %>
+      | <%= link_to 'Eliminar', proyecto_userstory_path(@proyecto, userstory), :confirm => 'Eliminar user story?', :method => :delete %></td>
+    <% end %>
+    </td>
+  </tr>
+<% end %>
+<tr><td colspan=4 style="background-color:#ddd;"></td></tr>
+<% @proyecto.userstory.order(:prioridad).sin_comenzar.each do |userstory| %>
   <tr>
     <td><%= link_to truncate(userstory.titulo, :length => 80), proyecto_userstory_path(@proyecto, userstory) %></td>
     <td><%= userstory.porcentaje_avance %></td>
